--- a/.github/workflows/sonarqubescan2.yml
+++ b/.github/workflows/sonarqubescan2.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set Up JDK 11
-        uses: actions/setup-java@2
+        uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'temurin'
